# home_work_6_1

./: .env.exaple  README.md  catalog_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_created_at_alter_post_image_and_more.py  0003_alter_post_publication_attribute.py  0004_remove_post_publication_attribute_post_publication.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/html_file/: base.html  category.html  contacts.html  header.html  home.html  post_delite.html  post_detail.html  post_form.html  post_list.html  product_delite.html  product_form.html  product_info.html  products_by_category.html  user_reg.html
catalog/html_file/registration/: login.html
catalog/management/commands/: add_product.py  create_moderator_group.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0003_alter_product_created_at.py  0004_product_status.py  0005_alter_product_options.py  0006_product_owner.py  0007_alter_product_options.py  0007_set_product_owners.py  0008_alter_product_owner.py  0008_category_slug.py  0009_alter_category_options.py  0010_alter_category_options_alter_product_options.py
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
config/config/: settings.py
user/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_usermodel_country.py
