[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Ilia Ryutin <iryutin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
